logs/validate.20260324-171110.log
error[E0310]: the parameter type `T` may not live long enough
   --> src/Chap37/BSTSetPlainMtEph.rs:500:13
    |
500 |             self.iter()
    |             ^^^^^^^^^^^
    |             |
    |             the parameter type `T` must be valid for the static lifetime...
    |             ...so that the type `T` will meet its required lifetime bounds
    |
help: consider adding an explicit lifetime bound
    |
493 |     impl<'a, T: StTInMtT + Ord + TotalOrder + 'static> std::iter::IntoIterator for &'a BSTSetPlainMtEph<T> {
    |                                             +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
Elapsed: 27s
